# tilt_ui

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOVER.md  ML_VALIDATION_GUIDE.md  README.md  package-lock.json  pyproject.toml  validate_ml_isolation.py
.github/workflows/: ci.yml
backend/: ambient_poller.py  cleanup.py  database.py  device_utils.py  main.py  models.py  scanner.py  state.py  temp_controller.py  websocket.py
backend/ingest/: __init__.py  base.py  router.py  units.py
backend/migrations/: mark_outliers_invalid.py
backend/ml/: __init__.py  config.py  pipeline.py  pipeline_manager.py
backend/routers/: alerts.py  ambient.py  batches.py  config.py  control.py  devices.py  ha.py  ingest.py  maintenance.py  recipes.py  system.py  tilts.py
backend/services/: __init__.py  batch_linker.py  beerxml_parser.py  calibration.py  ha_client.py  ingest_manager.py  recipe_importer.py  smoothing.py
backend/static/: batches.html  calibration.html  devices.html  index.html  logging.html  recipes.html  (+1 more)
deploy/: brewsignal.service  install.sh  tiltui.service
docs/: TILTPI_REVERSE_ENGINEERING.md  device-pairing.md  manual-testing-results.md  rapt-pill-ble-integration.md
frontend/: vite.config.ts
tests/: conftest.py  test_anomaly.py  test_batch_time_helpers.py  test_curve_fitting.py  test_kalman.py  test_ml_config.py  test_ml_integration_e2e.py  test_ml_pipeline.py  test_ml_pipeline_manager.py  test_ml_schema.py  test_mpc.py  test_mpc_ambient_history.py  test_pipeline_manager.py  test_reading_storage.py  test_temp_migration.py  test_tilt_temp_conversion.py
(+1162 files in other folders)
