[project]
name = "brewsignal"
version = "2.5.0"
description = "Modern web UI for BrewSignal Hydrometer monitoring"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "greenlet>=3.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "bleak>=0.22",
    "beacontools>=2.1",
    "httpx>=0.25",
    "defusedxml>=0.7",
    "python-multipart>=0.0.6",
    # ML dependencies
    "numpy>=1.24",
    "filterpy>=1.4.5",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
